# ubiquity_motor

./: CMakeLists.txt  package.xml  ubiquity_motor.xml
cfg/: controller_params.yaml
include/ubiquity_motor/: mcb_interface.hpp  motor_diagnostics.hpp  motor_hardware.h  motor_message.h  motor_parameters.h  motor_serial.h
src/: mcb_interface.cc  motor_diagnostics.cc  motor_hardware.cc  motor_message.cc  motor_node.cc  motor_parameters.yaml  motor_serial.cc  probe_robot.cc
